--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,15 @@
+_book
+.settings
+.project
+.classpath
+.springBeans
+target
+bin
+
 # Compiled class file
 *.class
+*.classpath
+*.factorypath
 
 # Log file
 *.log
@@ -13,7 +23,6 @@
 # Package Files #
 *.jar
 *.war
-*.nar
 *.ear
 *.zip
 *.tar.gz
@@ -21,3 +30,12 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+# IDE Files #
+*.iml
+.idea
+.idea/
+.project
+.settings
+target
+.DS_Store
